--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "budget-buddy-lite",
   "version": "1.0.0",
-  "description": "",
+  "description": "A simple budget tracking tool powerd by Yaml data and a React UI",
   "main": "index.js",
   "scripts": {
     "start": "parcel src/index.html",
