--- a/package.json
+++ b/package.json
@@ -14,8 +14,11 @@
     "@atomikui/core": "^0.8.0",
     "@fortawesome/free-solid-svg-icons": "^5.15.1",
     "@fortawesome/react-fontawesome": "^0.1.12",
+    "codemirror": "^5.58.2",
+    "json-to-pretty-yaml": "^1.2.2",
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
+    "react-codemirror2": "^7.2.1",
     "react-dom": "^17.0.1"
   },
   "devDependencies": {
