--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
     "react-codemirror2": "^7.2.1",
-    "react-dom": "^17.0.1"
+    "react-dom": "^17.0.1",
+    "yamljs": "^0.3.0"
   },
   "devDependencies": {
     "@atomikui/core-sass": "^0.2.0",
