--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react": "^17.0.1",
     "react-codemirror2": "^7.2.1",
     "react-dom": "^17.0.1",
+    "react-flexbox-grid": "^2.1.2",
     "react-router-dom": "^5.2.0",
     "yamljs": "^0.3.0"
   },
