--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "main": "index.js",
   "scripts": {
     "build": "parcel build src/index.html",
-    "start:client": "parcel src/index.html",
+    "start:client": "NODE_ENV=development parcel src/index.html",
     "start:server": "nodemon src/server",
-    "start": "node src/server"
+    "start": "NODE_ENV=production node src/server"
   },
   "keywords": [],
   "author": "",
@@ -19,6 +19,7 @@
     "body-parser": "^1.19.0",
     "codemirror": "^5.58.2",
     "cors": "^2.8.5",
+    "dotenv-flow": "^3.2.0",
     "express": "^4.17.1",
     "file-system": "^2.2.2",
     "fs-extra": "^9.0.1",
