Login page and PIN authntication

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build": "parcel build src/index.html",
     "start:client": "NODE_ENV=development parcel src/index.html",
-    "start:server": "nodemon src/server",
+    "start:server": "NODE_ENV=development nodemon src/server",
     "start": "NODE_ENV=production node src/server"
   },
   "keywords": [],
@@ -16,13 +16,17 @@
     "@atomikui/core": "^0.9.0",
     "@fortawesome/free-solid-svg-icons": "^5.15.1",
     "@fortawesome/react-fontawesome": "^0.1.12",
+    "bcrypt-node": "^0.1.0",
     "body-parser": "^1.19.0",
     "codemirror": "^5.58.2",
+    "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
+    "dotenv-flow": "^3.2.0",
     "express": "^4.17.1",
     "file-system": "^2.2.2",
     "fs-extra": "^9.0.1",
     "json-to-pretty-yaml": "^1.2.2",
+    "jsonwebtoken": "^8.5.1",
     "nodemon": "^2.0.6",
     "path": "^0.12.7",
     "prop-types": "^15.7.2",
