--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "version": "1.0.0",
   "description": "A simple budget tracking tool powerd by Yaml data and a React UI",
   "main": "index.js",
+  "engines": {
+    "node": ">=12.16.2",
+    "npm": ">=6.14.4"
+  },
   "scripts": {
     "build": "parcel build src/index.html",
     "start:client": "NODE_ENV=development parcel src/index.html",
