--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "A simple budget tracking tool powerd by Yaml data and a React UI",
   "main": "index.js",
   "engines": {
-    "node": ">=12.16.2",
-    "npm": ">=6.14.4"
+    "node": "12.16.2",
+    "npm": "6.14.4"
   },
   "scripts": {
     "build": "parcel build src/index.html",
