--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "npm": "6.14.4"
   },
   "scripts": {
-    "build-app": "parcel build src/index.html",
+    "build-app": "NODE_ENV=production parcel build src/index.html",
     "start:client": "NODE_ENV=development parcel src/index.html",
     "start:server": "NODE_ENV=development nodemon src/server",
     "start": "NODE_ENV=production node src/server"
