--- a/package.json
+++ b/package.json
@@ -28,7 +28,6 @@
     "express": "^4.17.1",
     "file-system": "^2.2.2",
     "fs-extra": "^9.0.1",
-    "json-to-pretty-yaml": "^1.2.2",
     "jsonwebtoken": "^8.5.1",
     "nodemon": "^2.0.6",
     "path": "^0.12.7",
@@ -37,8 +36,7 @@
     "react-codemirror2": "^7.2.1",
     "react-dom": "^17.0.1",
     "react-flexbox-grid": "^2.1.2",
-    "react-router-dom": "^5.2.0",
-    "yamljs": "^0.3.0"
+    "react-router-dom": "^5.2.0"
   },
   "devDependencies": {
     "@atomikui/core-sass": "^0.2.0",
