--- a/package.json
+++ b/package.json
@@ -7,10 +7,10 @@
     "npm": "6.14.4"
   },
   "scripts": {
-    "build-app": "NODE_ENV=production parcel build src/index.html",
-    "start:client": "NODE_ENV=development parcel src/index.html",
-    "start:server": "NODE_ENV=development nodemon src/server",
-    "start": "NODE_ENV=production node src/server"
+    "build-app": "parcel build src/index.html",
+    "start:client": "parcel src/index.html",
+    "start:server": "nodemon src/server",
+    "start": "node src/server"
   },
   "keywords": [],
   "author": "",
@@ -24,7 +24,7 @@
     "codemirror": "^5.58.2",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
-    "dotenv-flow": "^3.2.0",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "file-system": "^2.2.2",
     "fs-extra": "^9.0.1",
