--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "file-system": "^2.2.2",
+    "focus-trap": "^6.3.0",
     "fs-extra": "^9.0.1",
     "jsonwebtoken": "^8.5.1",
     "localbase": "^0.7.4",
