--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "classnames": "^2.2.6",
     "codemirror": "^5.58.2",
     "cookie-parser": "^1.4.5",
+    "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "file-system": "^2.2.2",
@@ -33,6 +34,7 @@
     "fs-extra": "^9.0.1",
     "jsonwebtoken": "^8.5.1",
     "localbase": "^0.7.4",
+    "mongoose": "^5.12.5",
     "nodemon": "^2.0.6",
     "path": "^0.12.7",
     "prop-types": "^15.7.2",
