--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "npm": "6.14.4"
   },
   "scripts": {
-    "build": "parcel build src/index.html",
-    "start:client": "parcel src/index.html --port 1111",
+    "build": "parcel build src/client/index.html",
+    "start:client": "parcel src/client/index.html --port 1111",
     "start:server": "nodemon src/server",
     "start": "node src/server",
     "docker": "docker build -t budget-buddy-lite ."
